# low-code-platform

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
core-api/: Cargo.toml
core-api/src/: lib.rs
rfc/: 001.md
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
utils/: Cargo.toml
utils/src/: error.rs  lib.rs
